--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
   --third-bg-color: #f5f4fa;
   --primary-black-color: #000;
   --primary-border-color: #eee;
+  --secondary-border-color: #ececec;
 }
 
 body {
@@ -15,16 +16,31 @@ body {
   margin: 0;
 }
 ul {
+  padding: 0;
   list-style: none;
 }
+
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
 /* --------------------------INDEX------------------------- */
+
 /*------------------------ header ------------------ */
+.header {
+  display: flex;
+  align-items: center;
+  min-height: 80px;
+}
 .header-logo {
   font-family: Raleway, sans-serif;
   font-weight: 700;
   text-decoration: none;
   font-size: 26px;
   line-height: 1.19;
+  margin-right: 93px;
 }
 .header-logo:visited {
   color: var(--primary-black-color);
@@ -32,21 +48,27 @@ ul {
 .logo-blue {
   color: var(--accent-color);
 }
-.footer-logo {
-  font-family: Raleway, sans-serif;
-  font-weight: 700;
-  text-decoration: none;
-  font-size: 26px;
-  line-height: 1.19;
-  color: var(--primary-white-color);
+.header-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-
+.nav {
+  display: flex;
+  align-items: center;
+}
+.nav-list {
+  display: flex;
+}
 .nav-item {
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+}
+.nav-item:not(:last-child) {
+  margin-right: 50px;
 }
 
 .nav-link {
@@ -61,7 +83,9 @@ ul {
 .current {
   color: var(--accent-color);
 }
-
+.contact-list {
+  display: flex;
+}
 .contact-item {
   font-family: Roboto, sans-serif;
   font-style: normal;
@@ -70,6 +94,9 @@ ul {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--secondary-text-color);
+}
+.contact-item:not(:last-child) {
+  margin-right: 50px;
 }
 .contact-link {
   text-decoration: none;
@@ -84,10 +111,14 @@ ul {
 }
 
 /* MAIN */
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 /* -------------------------------hero  ---------------------*/
 .hero {
-  /* width: 1600px; */
-  /* height: 600px; */
+  width: 100%;
+  height: 600px;
   background-color: var(--secondary-bg-color);
   text-align: center;
 }
@@ -101,6 +132,7 @@ ul {
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  padding-top: 200px;
 }
 .hero-btn {
   padding: 10px 32px;
@@ -113,11 +145,18 @@ ul {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  margin-top: 30px;
 }
 /* ----------------------------------- features ------------------- */
-
+.features-list {
+  display: flex;
+  /* margin-top: 94px; */
+}
 .features-item {
-  width: 270px;
+  min-width: 270px;
+}
+.features-item:not(:last-child) {
+  margin-right: 30px;
 }
 .features-title {
   color: var(--primary-text-color);
@@ -133,14 +172,20 @@ ul {
   font-weight: 400;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  padding-top: 10px;
 }
 /* -----------------------------------about --------------------- */
+.about-list {
+  display: flex;
+}
 .about-title {
   font-family: Roboto, sans-serif;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
   letter-spacing: 0.03em;
+  margin-top: 94px;
+  margin-bottom: 50px;
 }
 
 .about-item:not(:last-child) {
@@ -156,10 +201,16 @@ ul {
   font-size: 36px;
   line-height: 1.16;
   letter-spacing: 0.03em;
+  margin-bottom: 50px;
 }
-
+.team-list {
+  display: flex;
+  justify-content: center;
+}
 .team-card {
+  font-size: 0;
   width: 270px;
+  text-align: center;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -169,6 +220,7 @@ ul {
   margin-right: 30px;
 }
 .team-name {
+  padding-top: 30px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
@@ -176,6 +228,8 @@ ul {
   letter-spacing: 0.03em;
 }
 .team-prof {
+  padding-top: 10px;
+  padding-bottom: 30px;
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
@@ -184,11 +238,18 @@ ul {
 /* FOOTER  */
 .footer {
   background-color: var(--secondary-bg-color);
+  min-height: 252px;
 }
-
+.footer-address {
+  margin-top: 20px;
+}
+.address-item:not(:last-child) {
+  margin-bottom: 9px;
+}
 .address-map {
   color: var(--primary-white-color);
   text-decoration: none;
+  font-weight: 400;
   font-size: 14px;
   font-style: normal;
   line-height: 1.71;
@@ -203,8 +264,26 @@ ul {
   color: rgba(255, 255, 255, 0.6);
 }
 
-/* ---------------------PORTFOLIO------------------------ */
+.footer-logo {
+  display: inline-block;
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  text-decoration: none;
+  font-size: 26px;
+  line-height: 1.19;
+  color: var(--primary-white-color);
+  margin-top: 60px;
+}
 
+/* ---------------------PORTFOLIO------------------------ */
+.header-border {
+  border-bottom: 1px solid var(--secondary-border-color);
+}
+.sort-list {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
 .sort-btn {
   background: var(--third-bg-color);
   padding: 6px 22px;
@@ -220,18 +299,30 @@ ul {
   color: var(--primary-text-color);
   cursor: pointer;
 }
-
+.sort-item:not(:last-child) {
+  margin-right: 8px;
+}
 .sort-btn:hover {
   background: var(--accent-color);
   color: var(--primary-white-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  font-size: 0;
+}
 .portfolio-item {
+  display: inline-block;
   width: 370px;
   height: 404px;
-  border: 1px solid var(--primary-border-color);
 }
+.portfolio-item:nth-last-child(n + 4) {
+  margin-bottom: 30px;
+}
+
 .portfolio-title {
   font-family: Roboto, sans-serif;
   font-style: normal;
@@ -240,6 +331,9 @@ ul {
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--primary-text-color);
+  padding-left: 24px;
+  padding-top: 20px;
+  padding-right: 24px;
 }
 .portfolio-description {
   font-family: Roboto, sans-serif;
@@ -249,4 +343,13 @@ ul {
   line-height: 1.85;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
+  padding-left: 24px;
+  padding-top: 4px;
+  padding-bottom: 20px;
+  padding-right: 24px;
+}
+.portfolio-card-list {
+  border-left: 1px solid var(--primary-border-color);
+  border-right: 1px solid var(--primary-border-color);
+  border-bottom: 1px solid var(--primary-border-color);
 }
